<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/settings_adapter_item_text_size"
            android:visibility="invisible"
            />
        
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/settings_adapter_item_text_size"
            android:text="@string/max_ram_title"
            />
        
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/settings_adapter_item_text_size"
            android:text="@string/min_ram_title"
            />
        
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/settings_adapter_item_text_size"
            android:text="@string/state_title"
            />
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffd62b32"/>
    
    <ListView 
        android:id="@+id/memory_settings_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1px"
        android:divider="#ffd62b32"/>

</LinearLayout>
