<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/lcd_height_label"
        android:textSize="@dimen/label_text_size"/>
    
    <EditText 
        android:id="@+id/lcd_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:maxLength="10"
        android:inputType="numberSigned"
        android:textSize="@dimen/edit_text_size"
        android:textColor="@color/edit_text_color"
        android:background="@drawable/ic_edit_text_background"/>

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/lcd_width_label"
        android:textSize="@dimen/label_text_size"/>
    
    <EditText 
        android:id="@+id/lcd_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:maxLength="10"
        android:inputType="numberSigned"
        android:textSize="@dimen/edit_text_size"
        android:textColor="@color/edit_text_color"
        android:background="@drawable/ic_edit_text_background"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/lcd_dpi_label"
        android:textSize="@dimen/label_text_size"/>
    
    <EditText 
        android:id="@+id/lcd_dpi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:maxLength="10"
        android:inputType="numberSigned"
        android:textSize="@dimen/edit_text_size"
        android:textColor="@color/edit_text_color"
        android:background="@drawable/ic_edit_text_background"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        
        <Button 
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textColor="#ff000000"
            android:background="@drawable/xml_cancel_button_background"
            android:text="@android:string/cancel"/>
        
        <Button 
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textColor="#ff000000"
            android:background="@drawable/xml_ok_button_background"
            android:text="@android:string/ok"/>
    </LinearLayout>
</LinearLayout>
